@@ -9,6 +9,9 @@
 import unittest
 
 import apt
+import apt_pkg
+import os
+import tempfile
 
 
 class TestAptCache(unittest.TestCase):
@@ -38,6 +41,29 @@ class TestAptCache(unittest.TestCase):
                 self.assert_('Version' in r)
                 self.assert_(len(r['Description']) > 0)
                 self.assert_(str(r).startswith('Package: %s\n' % pkg.name))
+
+    def test_dpkg_journal_dirty(self):
+        # backup old value
+        old_status = apt_pkg.Config.find_file("Dir::State::status")
+        # create tmp env
+        tmpdir = tempfile.mkdtemp()
+        dpkg_dir = os.path.join(tmpdir,"var","lib","dpkg")
+        os.makedirs(os.path.join(dpkg_dir,"updates"))
+        open(os.path.join(dpkg_dir,"status"), "w")
+        apt_pkg.Config.set("Dir::State::status",
+                       os.path.join(dpkg_dir,"status"))
+        cache = apt.Cache()
+        # test empty
+        self.assertFalse(cache.dpkg_journal_dirty)
+        # that is ok, only [0-9] are dpkg jounral entries
+        open(os.path.join(dpkg_dir,"updates","xxx"), "w")
+        self.assertFalse(cache.dpkg_journal_dirty)        
+        # that is a dirty journal
+        open(os.path.join(dpkg_dir,"updates","000"), "w")
+        self.assertTrue(cache.dpkg_journal_dirty)
+        # reset config value
+        apt_pkg.Config.set("Dir::State::status", old_status)
+        
 
 if __name__ == "__main__":
     unittest.main()
